--- a/index.html
+++ b/index.html
@@ -64,5 +64,9 @@
         <img src="whois.jpg" alt="Информация WHOIS">
         <p>Дата регистрации доменов kubsu.ru и kubsu-dev.ru</p>
     </div>
+    <div class="section">
+  <h2>6. Скриншот SFTP-подключения (FileZilla)</h2>
+  <img src="filezilla-screenshot.jpg" alt="Скриншот FileZilla">
+</div>
 </body>
 </html>
